# wxyc-catalog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/wxyc_catalog/: __init__.py  catalog_source.py  db.py  enrich_library_artists.py  export_to_sqlite.py  extract_library_labels.py
src/wxyc_catalog/sources/: __init__.py  archive.py  http.py  pg.py  sparql.py
tests/: conftest.py  factories.py  test_archive_source.py  test_catalog_source.py  test_db.py  test_enrich_library_artists.py  test_export_to_sqlite.py  test_extract_library_labels.py  test_http_source.py  test_pg_source.py  test_sparql_source.py
tests/integration/: test_export_pipeline.py
tests/unit/: test_catalog_source.py  test_db.py  test_enrich.py  test_export.py
